gcc/testsuite/rust/rustc/ui/rfc-2093-infer-outlives/cross-crate.rs
#![feature(rustc_attrs)]

#[rustc_outlives]
struct Foo<'a, T> { // { dg-error "" "" { target *-*-* } }
    bar: std::slice::IterMut<'a, T>
}

fn main() {}

